--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Data‑Driven CRO for E‑Commerce | Andrea Chimienti</title>
+  <title>Andrea Chimienti</title>
   <meta name="description" content="I help e‑commerce brands turn traffic into revenue with research‑driven conversion rate optimization, experimentation programs, and high‑performing landing pages." />
   <meta name="theme-color" content="#ffffff" />
   <meta property="og:title" content="Data‑Driven CRO for E‑Commerce | Andrea Chimienti" />
@@ -161,6 +161,7 @@
     .form .row{display:grid;grid-template-columns:repeat(2, minmax(0,1fr));gap:.75rem}
     @media (max-width:700px){.form .row{grid-template-columns:1fr}}
     .success{display:none;margin-top:.75rem;padding:.75rem;border:1px solid rgba(28,173,115,.35);background:rgba(28,173,115,.08);border-radius:12px;color:var(--green-700)}
+    .error{display:none;margin-top:.75rem;padding:.75rem;border:1px solid rgba(228,46,46,.35);background:rgba(228,46,46,.08);border-radius:12px;color:#7a1b1b}
 
     /* About photo */
     .about-photo{width:100%;height:auto;border-radius:20px;border:1px solid var(--border);box-shadow:var(--shadow);object-fit:cover}
@@ -340,6 +341,8 @@
         </div>
       </div>
     </section>
+
+    <!-- FAQ -->
     <section id="faq" class="section" aria-labelledby="faq-title">
       <div class="container">
         <span class="eyebrow">FAQ</span>
@@ -363,9 +366,9 @@
     <section id="contact" class="section" aria-labelledby="contact-title">
       <div class="container">
         <span class="eyebrow">Contact</span>
-        <h2 id="contact-title">Book a discovery call</h2>
+        <h2 id="contact-title">Get a Quote</h2>
         <div class="grid-2" style="margin-top:1rem">
-          <form class="card form" id="contactForm" aria-label="Contact form" action="https://formspree.io/f/xqalngzk" method="POST">
+          <form class="card form" id="contactForm" aria-label="Contact form" action="https://formspree.io/f/xqalngzk" method="POST" target="formspree_iframe">
             <input type="text" name="company" class="hide" tabindex="-1" autocomplete="off" aria-hidden="true" style="position:absolute;left:-9999px;opacity:0" />
             <div class="row">
               <label>
@@ -383,12 +386,12 @@
                 <input class="input" type="url" name="website" placeholder="https://yourstore.com" />
               </label>
               <label>
-                <span class="sr-only">Monthly traffic</span>
+                <span class="sr-only">Monthly Revenue</span>
                 <select class="input" name="traffic">
-                  <option value="" disabled selected>Monthly sessions</option>
+                  <option value="" disabled selected>Monthly Revenue</option>
                   <option>&lt; 50k</option>
-                  <option>50k – 150k</option>
-                  <option>150k – 500k</option>
+                  <option>50k – 250k</option>
+                  <option>250k – 500k</option>
                   <option>&gt; 500k</option>
                 </select>
               </label>
@@ -413,11 +416,18 @@
             <div class="error" id="formError" role="alert" aria-live="polite" aria-atomic="true" style="display:none">Something went wrong. Please try again or email me at and.chimienti@gmail.com.</div>
             <p class="muted" style="margin:0">Prefer email? <button type="button" class="button button--ghost" id="copyEmail">Copy email</button></p>
           </form>
+          <iframe name="formspree_iframe" class="hide" title="Submission frame"></iframe>
           <aside class="card">
             <h3>Calendly / Booking</h3>
             <p class="muted">If you’d rather grab a slot directly, use my booking link.</p>
             <p style="margin:.6rem 0 0"><a class="button button--ghost" href="https://calendly.com/your-handle/intro" target="_blank" rel="noopener">Open calendar</a></p>
             <div class="chip" style="margin-top:.85rem"><span class="dot"></span><span>30‑minute intro call</span></div>
+          </aside>
+
+          <aside class="card">
+            <h3>Telegram</h3>
+            <p class="muted">If prefer to chat on Telegram:</p>
+            <p style="margin:.6rem 0 0"><a class="button button--ghost" href="https://t.me/andchimi" target="_blank" rel="noopener">Open Telegram</a></p>
           </aside>
         </div>
       </div>
@@ -426,7 +436,7 @@
 
   <footer role="contentinfo">
     <div class="container" style="display:flex;flex-wrap:wrap;align-items:center;gap:.75rem;justify-content:space-between">
-      <p>© <span id="year"></span> Andrea Chimienti • CRO for E‑Commerce</p>
+      <p>© <span id="year"></span> Andrea Chimienti</p>
       <nav aria-label="Footer">
         <a class="muted" href="#services">Services</a>
         <span class="muted" aria-hidden="true">·</span>
@@ -539,8 +549,9 @@
           throw new Error(msg);
         }
       }catch(err){
-        if(errorBox){ errorBox.textContent = (err && err.message ? err.message : 'Something went wrong.') + ' You can also email me at and.chimienti@gmail.com.'; errorBox.style.display = 'block'; } else { alert((err && err.message ? err.message : 'Something went wrong.') + '
-You can also email me at and.chimienti@gmail.com.'); }
+        const errMsg = (err && err.message ? err.message : 'Something went wrong.') + '
+You can also email me at and.chimienti@gmail.com.';
+        if(errorBox){ errorBox.textContent = errMsg; errorBox.style.display = 'block'; } else { alert(errMsg); }
       }finally{
         if(btn){ btn.removeAttribute('disabled'); btn.textContent = 'Send'; }
       }
