--- a/index.html
+++ b/index.html
@@ -84,7 +84,12 @@
     .button--ghost:hover{border-color:var(--orange-500);color:var(--green-900)}
 
     /* Header on white */
-    .header{z-index:100;background:rgba(255,255,255,.9);backdrop-filter:saturate(1.2) blur(8px);border-bottom:1px solid var(--border)}
+    .header{
+  position: static;
+  top: auto;
+  background:#fff;
+  backdrop-filter:none;
+}
     .nav{display:flex;align-items:center;justify-content:space-between;padding:.85rem 0}
     .brand{display:flex;align-items:center;gap:.75rem;text-decoration:none}
     /* Brand name only (force dark green) */
@@ -174,6 +179,8 @@
     .hide{display:none}
     .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}
 
+    .spanheadline {text-decoration-color: var(--green-700); text-decoration: underline;text-decoration-thickness: 20px;text-underline-offset: -13px;text-decoration-skip-ink: none;text-decoration-color: var(--orange-500);text-decoration-margin: 10px;}
+
     /* Reduce motion for users who prefer it */
     @media (prefers-reduced-motion: reduce){
       *{animation:none!important;transition:none!important}
@@ -192,11 +199,18 @@
       .hero h1{font-size:clamp(1.6rem, 6.5vw, 2.2rem)}
       .hero .actions{justify-content:center}
       .hero-portrait{margin-top:1rem}
+      .nav{
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    flex-wrap:nowrap;
+    gap:.5rem;
     }
     @media (max-width: 600px){
       .metrics{grid-template-columns:repeat(2,minmax(0,1fr))}
       .hero-portrait{width:min(240px,70vw);height:auto;max-width:100%}
       .container{padding-inline:1rem}
+      .spanheadline {text-decoration-thickness: 10px; text-underline-offset: -8px;}
     }
     @media (max-width: 420px){
       .metrics{grid-template-columns:1fr}
@@ -231,7 +245,7 @@
       <div class="container grid">
         <div>
           <span class="kicker"><span class="dot"></span>Conversion Rate Optimization</span>
-          <h1>Squeeze The Most Out Of Your Traffic With <br><span style="text-decoration-color: var(--green-700); text-decoration: underline;text-decoration-thickness: 20px;text-underline-offset: -13px;text-decoration-skip-ink: none;text-decoration-color: var(--orange-500);text-decoration-margin: 10px;">Data-Driven CRO</span></h1>
+          <h1>Squeeze The Most Out Of Your Traffic With <br><span class="spanheadline">Data-Driven CRO</span></h1>
           <p>I help DTC E-commerce brands make more profit per visitor with the same amount of adspend through research-backed data-driven CRO.</p>
           <div class="actions">
             <a class="button button--primary" href="#contact" aria-label="Book a discovery call">Get a Quote or Book A Call</a>
