--- a/index.html
+++ b/index.html
@@ -214,8 +214,10 @@
     }
     @media (max-width: 420px){
       .metrics{grid-template-columns:1fr}
-      .button{width:100%;justify-content:center}
+      .button{width:100%;justify-content:center; font-size: 16px; padding: 5px 10px 5px 10px;}
       .hero h1 span{ text-decoration-thickness: 14px; text-underline-offset: -9px; }
+      .hero {padding-top: 25px;}
+      .header {box-shadow: 0px 0px 2px 0px rgba(207,207,207,1);}
     }
 </style>
 </head>
