--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
         </details>
         <details>
           <summary>Can I get a quote on a project?</summary>
-          <p>Yes, we can discuss a project scope, responsabilities and compensation via your preferred communication channel (e-mail or Telegram).</p>
+          <p class="muted">Yes, we can discuss a project scope, responsabilities and compensation via your preferred communication channel (e-mail or Telegram).</p>
         </details>
         <details>
           <summary>How soon can we see lift?</summary>
