--- a/index.html
+++ b/index.html
@@ -367,16 +367,11 @@
             </div>
           </article>
           <article class="card case" aria-label="Case Study 3">
-            <h3>Premium Skincare DTC Brand</h3>
-            <p class="muted">Designed & Developed The entire Customer Journey from pre-lander to post-purchase.</p>
+            <h3>Design & Development</h3>
+            <p class="muted">Designed & Developed The entire Customer Journey from pre-lander to post-purchase as a freelance for countless brands.</p>
             <div class="result">
-              <span class="pill">+19% AOV</span>
-              <span class="pill">+9% CR to Purchase</span>
-              <span class="pill">+6 NPS</span>
-            </div>
-            <div class="foot">
-              <span class="muted">6 weeks · A/B/n</span>
-              <a class="button button--ghost" href="#contact">Get a similar plan</a>
+              <span class="pill">Custom design</span>
+              <span class="pill">Custom development</span>
             </div>
           </article>
         </div>
