--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
           </div>
           <div class="metrics" role="list" aria-label="Proof points">
             <div class="metric" role="listitem">
-              <strong data-counter data-target="200" data-suffix="%">0</strong>
+              <strong data-counter data-target="100" data-suffix="%">0</strong>
               <span class="label">CVR Uplift</span>
             </div>
             <div class="metric" role="listitem">
@@ -264,7 +264,7 @@
               <span class="label">Experiments Run</span>
             </div>
             <div class="metric" role="listitem">
-              <strong data-counter data-target="89" data-suffix="%">0</strong>
+              <strong data-counter data-target="125" data-suffix="%">0</strong>
               <span class="label">AOV Growth</span>
             </div>
           </div>
@@ -350,15 +350,15 @@
         <h2 id="work-title">Recent wins</h2>
         <div class="grid-3" style="margin-top:1rem">
           <article class="card case" aria-label="Case Study 1">
-            <h3>Premium Skincare DTC Forge Skin</h3>
+            <h3>Premium Skincare DTC Brand</h3>
             <p class="muted">Revamped the entire Customer Journey to better identify our audience & squeeze the most amount of revenue from paid traffic</p>
             <div class="result">
-              <span class="pill">+89% AOV</span>
-              <span class="pill">+200% Funnel CVR</span>
+              <span class="pill">$65 AOV → $130 AOV</span>
+              <span class="pill">2% CVR → 4.5% CVR</span>
             </div>
           </article>
           <article class="card case" aria-label="Case Study 2">
-            <h3>Premium Skincare DTC Forge Skin</h3>
+            <h3>Premium Skincare DTC Brand</h3>
             <p class="muted">Conducted thorough customer reserach through personalized quizzes that deepened the understanding of our audience & helped brand messaging.</p>
             <div class="result">
               <span class="pill">Reduced CAC</span>
